# live-financial-stream-sse

./: Cargo.toml  README.md
frontend-test/: package-lock.json  package.json
frontend-test/src/: main.ts
src/: main.rs
