[package]
name = "live-financial-stream-sse"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
yahoo_finance_api = "4.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.30"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.14", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
